fixed the extra space in page-list in navbar

--- a/appcubator/static/css/app/editor/editor-navbar.less
+++ b/appcubator/static/css/app/editor/editor-navbar.less
@@ -295,7 +295,7 @@
 
 .pages ul {
   border-top: 1px solid #1b2535;
-  display: inline-block;
+  /* display: inline-block; *//* commented out b/c this causes an extra space in page-list when num pages = 0 */
   width: 283px;
   padding: 0;
   overflow: hidden;
